:bug: Fix label in wrong position in <u-pie-chart>

--- a/src/u-pie-chart.vue/module.css
+++ b/src/u-pie-chart.vue/module.css
@@ -47,6 +47,7 @@ $group_size: 120px;
 .label {
     display: none;
     position: absolute;
+    top: 0;
     white-space: nowrap;
 }
 
